--- a/ipu/static/account/auth.css
+++ b/ipu/static/account/auth.css
@@ -1,763 +1,1 @@
-@media (min-width:300px) and (orientation: landscape){
-
-  html {
-    height: 100%;
-    background: url("images/2.jpg") no-repeat center fixed;
-    background-size: cover;
-    font-size: 12px;
-}
-
-
-body {
-    min-height: 110%;
-    background: rgba(0, 0, 0, 0.7);
-    padding: 50px;
-    padding-bottom: 0px;
-}
-
-.navbar-fixed
-{
-  height: 0px;
-}
-
-main
-{
-    align-items: center;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-    padding: 10px;
-}
-main img
-{
-  height: 80px;
-  width: 95px;
-  margin-bottom: 1px;
-}
-
-#heading
-{
-  color: white;
-  font-size: 20px;
-  font-family: "Helvetica";
-}
-
-#form-box
-{
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  transition: box-shadow .25s;
-  height: 280px;
-  border-radius: 7px;
-  width: 90%;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-}
-
-#student-signup-mainbox
-{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#student-signup-box
-{
-  width: 100%;
-}
-
-#recruiter-signup-mainbox
-{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#recruiter-signup-box
-{
-  width: 100%;
-}
-
-
-.tabs .tab a {
-    color: #26a69a;
-    font-size: 12px;
-}
-
-.tabs
-{
-  height: 40px;
-}
-
-.tabs .indicator {
-   
-    background-color: #26a69a;
-    width: 50%;  
-}
-
-.card-panel
-{
-  box-shadow: none;
-  margin: 0;
-  font-size: 10px;
-  padding-bottom: 0px;  
-
-   
-}
-
-#corner-buttons {
-    position: absolute;
-    top: 1em;
-    right: 1em;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    left: 5%;
-    width: 90%;
-
-}
-
-#corner-buttons-small {
-    position: absolute;
-    top: 1em;
-    right: 1em;
-    display: flex;
-    justify-content: space-between;
-    left: 5%;
-    width: 90%;
-    
-}
-
-#corner-buttons a{
-    margin: 4px;
-
-}
-
-#corner-buttons-small a{
-    margin: 4px;
-    font-size: 10px;
-    line-height: 16px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}
-
-#student-login-btn
-{
-  width: 100%;
-  font-weight: bold;
-}
-
-#login-btn
-{
-  width: 100%;
-  font-weight: bold;
-}
-
-
-
-
-
-.black_overlay{
-      display: none;
-      position: absolute;
-      top: 0%;
-      left: 0%;
-      width: 100%;
-      height: 100%;
-      background-color: black;
-      opacity: 0.7;
-      z-index:1001;
-
-    }
-.white_content {
-      display: none;
-      position: absolute;
-      top: 18%;
-      left: 12%;
-/*
-      justify-content: center;
-      align-items: center;
-      top: 5%;
-      left: 5%;
-      width: 90%;
-      height: 90%;
-      padding: 10px;
-      border-radius: 2%;
-	*/
-      border: 1px solid white;
-      background-color: white;
-      z-index:1002;
-      overflow: auto;
-      color: black;
-    }
-.white_content #cross
-    {
-        position: absolute;
-        right: 10px;
-        top: 10px;
-        color: black;
-    }
-
-    .white_content h4
-    {
-      color: #337ab7;
-      margin-top: 15px;
-    }
-
-    #back
-    {
-      position: absolute;
-      top: 200px;
-      left: 10px;
-    }
-
-.help-block {
-    font-size: 0.80rem;
-}
-
-}
-
-
-
-@media (min-width:300px) and (orientation: portrait){
-
-  html {
-    height: 100%;
-    background: url("images/2.jpg") no-repeat center fixed;
-    background-size: cover;
-}
-
-
-body {
-    min-height: 100%;
-    background: rgba(0, 0, 0, 0.7);
-    padding: 10px;
-    padding-left:5px;
-    padding-right:5px;
-    padding-bottom: 0px;
-}
-
-.navbar-fixed
-{
-  height: 0px;
-}
-
-main
-{
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding: 10px;
-    margin-top: 50px;
-}
-main img
-{
-  margin-bottom: 0px;
-  height: 80px;
-  width: 95px;
-}
-
-#heading
-{
-  color: white;
-  font-size: 30px;
-  font-family: "Helvetica";
-}
-
-#form-box
-{
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  transition: box-shadow .25s;
-  height: 300px;
-  border-radius: 7px;
-  width: 95%;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-
-}
-
-#form-box .row
-{
-  width: 100%;
-}
-
-
-#student-signup-mainbox
-{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  
-}
-
-#student-signup-box
-{
-  width: 100%;
-}
-
-#recruiter-signup-mainbox
-{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#recruiter-signup-box
-{
-  width: 100%;
-}
-
-.tabs
-{
-  height: 45px;
-}
-
-
-.tabs .tab a {
-    color: #26a69a;
-    font-size: 12px;
-}
-
-#form-box .input-field label.active {
-    font-size: .9rem;
-    transform: translateY(-140%);
-    margin-top: 2px;
-}
-
-.tabs .indicator {
-   
-    background-color: #26a69a;
-    width: 50%;
-    height: 4px;
-}
-
-.card-panel
-{
-  box-shadow: none;
-  margin: 0;
-  font-size: 12px;
-  padding-bottom: 0px;  
-  padding-left: 2px;
-  padding-top: 2px;
-  padding-right: 2px;
-
-   
-}
-
-#student-login-div form .row
-{
-   margin-bottom: 1px;
-   margin-top: 5px;
-   padding: 5px;
-   padding-left: 0px;
-   padding-right: 0px;
-}
-
-#login-div form .row
-{
-   margin-bottom: 2px;
-   margin-top: 2px;
-   padding: 2px;
-}
-
-
-#test1 .row
-{
-  height: 50px;
-  font-size: 12px;
-}
-
-#test1 .col
-{
-  font-size: 12px;
-}
-
-#test2 .row
-{
-  height: 50px;
-  font-size: 12px;
-}
-
-#test2 .col
-{
-  font-size: 12px;
-}
-
-#corner-buttons {
-    position: absolute;
-    top: 1em;
-    right: 1em;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    left: 5%;
-    width: 90%;
-
-}
-
-#corner-buttons-small {
-    position: absolute;
-    top: 1em;
-    right: 1em;
-    display: flex;
-    justify-content: center;
-    left: 5%;
-    width: 90%;
-    
-}
-
-#corner-buttons a{
-    margin: 5px;
-    width: 380px;
-    height: 60px;
-    font-size: 1px;
-    line-height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-#corner-buttons-small a{
-    margin: 5px;
-    font-size: 10px;
-    width: 100px;
-    line-height: 10px;
-    display: flex;
-    padding: 2px;
-    justify-content: center;
-    align-items: center;
-    
-}
-
-#student-login-btn
-{
-  width: 100%;
-  font-weight: bold;
-  height: 25px;
-  font-size: 12px;
-  line-height: 12px;
-}
-
-#login-btn
-{
-  width: 100%;
-  font-weight: bold;
-  height: 25px;
-  font-size: 12px;
-  line-height: 12px;
-}
-
-
-.black_overlay{
-      display: none;
-      position: absolute;
-      top: 0%;
-      left: 0%;
-      width: 100%;
-      height: 100%;
-      background-color: black;
-      opacity: 0.7;
-      z-index:1001;
-
-    }
-.white_content {
-      display: none;
-      position: absolute;
-      top: 15%;
-      left: 0%;
-/*
-      justify-content: center;
-      align-items: center;
-      position: absolute;
-      top: 4%;
-      left: 5%;
-      width: 90%;
-      height: 92%;
-      padding: 5px;
-      border-radius: 2%;
-*/
-      border: 1px solid white;
-      background-color: white;
-      z-index:1002;
-      overflow: auto;
-      color: black;
-    }
-.white_content #cross
-    {
-        position: absolute;
-        right: 5px;
-        top: 5px;
-        color: black;
-    }
-
-    .white_content h4
-    {
-      color: #337ab7;
-      margin-top: 20px;
-      margin-bottom: 3px;
-    }
-
-
-   #back
-    {
-      position: absolute;
-      top: 20px;
-      left: 15px;
-      padding: 2px;
-      z-index: 541651651654;
-    } 
-
-.help-block {
-    font-size: 0.80rem;
-}
-
-input[type="text"], input[type="password"], input[type="email"], input[type="url"], input[type="time"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="tel"], input[type="number"], input[type="search"], textarea.materialize-textarea {
-    background-color: transparent;
-    border: none;
-    border-bottom: 1px solid #9e9e9e;
-    border-radius: 0;
-    outline: none;
-    height: 3rem;
-    width: 100%;
-    font-size: .8rem;
-    margin: 0 0 15px 0;
-    padding: 0;
-    box-shadow: none;
-    box-sizing: content-box;
-    transition: all 0.3s;
-}
-
-
-}
-
-@media (min-width:992px){
-
-  html {
-    height: 100%;
-    background: url("images/2.jpg") no-repeat center fixed;
-    background-size: cover;
-    font-size: 15px;
-}
-
-
-body {
-    min-height: 100%;
-    background: rgba(0, 0, 0, 0.7);
-    padding: 50px;
-    padding-bottom: 0px;
-}
-
-.navbar-fixed
-{
-  height: 0px;
-}
-
-main
-{
-    align-items: center;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-    padding: 10px;
-}
-main img
-{
-  margin-bottom: 0px;
-  position: relative;
-  top: 0px;
-  height: 110px;
-  width: 135px;
-}
-
-#heading
-{
-  color: white;
-  font-size: 35px;
-  position: relative;
-  top: 0px;
-  font-family: "Helvetica";
-}
-
-#form-box
-{
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  transition: box-shadow .25s;
-  height: 350px;
-  border-radius: 7px;
-  width: 40%;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  position: relative;
-  top: 0px;
-}
-
-#student-signup-mainbox
-{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#student-signup-box
-{
-  width: 100%;
-}
-
-#recruiter-signup-mainbox
-{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#recruiter-signup-box
-{
-  width: 100%;
-}
-
-
-.tabs .tab a {
-    color: #26a69a;
-}
-
-.tabs .indicator {
-   
-    background-color: #26a69a;
-    width: 50%;  
-}
-
-.card-panel
-{
-  box-shadow: none;
-  margin: 0;
-  font-size: 12px;
-  padding-bottom: 0px;  
-
-   
-}
-
-#corner-buttons {
-    position: absolute;
-    top: 1em;
-    right: 1em;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    left: 5%;
-    width: 90%;
-
-}
-
-#corner-buttons-small {
-    position: absolute;
-    top: 1em;
-    right: 1em;
-    display: flex;
-    justify-content: space-between;
-    left: 5%;
-    width: 90%;
-    
-}
-
-#corner-buttons a{
-    margin: 4px;
-
-}
-
-#corner-buttons-small a{
-    margin: 4px;
-    font-size: 10px;
-    line-height: 16px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}
-
-#student-login-btn
-{
-  width: 100%;
-  font-weight: bold;
-}
-
-#login-btn
-{
-  width: 100%;
-  font-weight: bold;
-}
-
-
-
-
-
-.black_overlay{
-      display: none;
-      position: absolute;
-      top: 0%;
-      left: 0%;
-      width: 100%;
-      height: 100%;
-      background-color: black;
-      opacity: 0.7;
-      z-index:1001;
-
-    }
-.white_content {
-      display: none;
-      position: absolute;
-      top: 13%;
-      left: 26%;
-	/*
-      justify-content: center;
-      align-items: center;
-      top: 5%;
-      left: 20%;
-      width: 60%;
-      height: 90%;
-      padding: 10px;
-      border-radius: 2%;
-	 */
-      border: 1px solid white;
-      background-color: white;
-      z-index:1002;
-      overflow: auto;
-      color: black;
-    }
-.white_content #cross
-    {
-        position: absolute;
-        right: 10px;
-        top: 10px;
-        color: black;
-    }
-
-    #back
-    {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-    }
-
-.help-block {
-    font-size: 0.80rem;
-}
-
-}
-
-.required > label:after {
-	content: ' (*)' !important;
-	color: #337ab7 !important;
-	top: 0px !important;
-	opacity: 1 !important;
-	display: inline !important;
-}
-
-.required > [type="checkbox"] + label:after {
-	content: '' !important;
-}
+@media (min-width:300px) and (orientation:landscape){html{height:100%;background:url(images/2.jpg) center no-repeat fixed;background-size:cover;font-size:12px}body{min-height:110%;background:rgba(0,0,0,.7);padding:50px 50px 0}.navbar-fixed{height:0}main{align-items:center;display:flex;justify-content:center;flex-direction:column;padding:10px}main img{height:80px;width:95px;margin-bottom:1px}#heading{color:#fff;font-size:20px;font-family:Helvetica}#form-box{background-color:#fff;display:flex;flex-direction:column;transition:box-shadow .25s;height:280px;border-radius:7px;width:90%;box-shadow:0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12)}#recruiter-signup-mainbox,#student-signup-mainbox{display:flex;justify-content:center;align-items:center}#recruiter-signup-box,#student-signup-box{width:100%}.tabs .tab a{color:#26a69a;font-size:12px}.tabs{height:40px}.tabs .indicator{background-color:#26a69a;width:50%}#corner-buttons,#corner-buttons-small{position:absolute;top:1em;right:1em;left:5%;width:90%;display:flex}.card-panel{box-shadow:none;margin:0;font-size:10px;padding-bottom:0}#corner-buttons{flex-direction:row;justify-content:space-between}#corner-buttons-small{justify-content:space-between}#corner-buttons a{margin:4px}#corner-buttons-small a{margin:4px;font-size:10px;line-height:16px;display:flex;justify-content:center;align-items:center}.black_overlay,.white_content{display:none;position:absolute}#login-btn,#student-login-btn{width:100%;font-weight:700}.black_overlay{top:0;left:0;width:100%;height:100%;background-color:#000;opacity:.7;z-index:1001}.white_content{top:18%;left:12%;border:1px solid #fff;background-color:#fff;z-index:1002;overflow:auto;color:#000}.white_content #cross{position:absolute;right:10px;top:10px;color:#000}.white_content h4{color:#337ab7;margin-top:15px}#back{position:absolute;top:200px;left:10px}.help-block{font-size:.8rem}}@media (min-width:300px) and (orientation:portrait){#form-box .row,#recruiter-signup-box,#student-signup-box{width:100%}html{height:100%;background:url(images/2.jpg) center no-repeat fixed;background-size:cover}body{min-height:100%;background:rgba(0,0,0,.7);padding:10px 5px 0}.navbar-fixed{height:0}main{align-items:center;display:flex;justify-content:center;flex-direction:column;padding:10px;margin-top:50px}main img{margin-bottom:0;height:80px;width:95px}#heading{color:#fff;font-size:30px;font-family:Helvetica}#form-box{background-color:#fff;display:flex;flex-direction:column;transition:box-shadow .25s;height:300px;border-radius:7px;width:95%;box-shadow:0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12)}#recruiter-signup-mainbox,#student-signup-mainbox{display:flex;justify-content:center;align-items:center}.tabs{height:45px}.tabs .tab a{color:#26a69a;font-size:12px}#form-box .input-field label.active{font-size:.9rem;transform:translateY(-140%);margin-top:2px}.tabs .indicator{background-color:#26a69a;width:50%;height:4px}#corner-buttons,#corner-buttons-small{position:absolute;top:1em;right:1em;left:5%;width:90%;display:flex}#test1 .row,#test2 .row{height:50px;font-size:12px}.card-panel{box-shadow:none;margin:0;font-size:12px;padding:2px 2px 0}#student-login-div form .row{margin-bottom:1px;margin-top:5px;padding:5px 0}#login-div form .row{margin-bottom:2px;margin-top:2px;padding:2px}#test1 .col{font-size:12px}#test2 .col{font-size:12px}#corner-buttons{flex-direction:row;justify-content:center}#corner-buttons-small{justify-content:center}#corner-buttons a{margin:5px;width:380px;height:60px;font-size:1px;line-height:30px;display:flex;justify-content:center;align-items:center}#corner-buttons-small a{margin:5px;font-size:10px;width:100px;line-height:10px;display:flex;padding:2px;justify-content:center;align-items:center}.black_overlay,.white_content{display:none;left:0;position:absolute}#login-btn,#student-login-btn{width:100%;font-weight:700;height:25px;font-size:12px;line-height:12px}.black_overlay{top:0;width:100%;height:100%;background-color:#000;opacity:.7;z-index:1001}.white_content{top:15%;border:1px solid #fff;background-color:#fff;z-index:1002;overflow:auto;color:#000}.white_content #cross{position:absolute;right:5px;top:5px;color:#000}.white_content h4{color:#337ab7;margin-top:20px;margin-bottom:3px}#back{position:absolute;top:20px;left:15px;padding:2px;z-index:541651651654}.help-block{font-size:.8rem}input[type=number],input[type=search],input[type=text],input[type=password],input[type=email],input[type=url],input[type=time],input[type=date],input[type=datetime],input[type=datetime-local],input[type=tel],textarea.materialize-textarea{background-color:transparent;border:none;border-bottom:1px solid #9e9e9e;border-radius:0;outline:0;height:3rem;width:100%;font-size:.8rem;margin:0 0 15px;padding:0;box-shadow:none;box-sizing:content-box;transition:all .3s}}@media (min-width:992px){#form-box,#heading,main img{position:relative;top:0}html{height:100%;background:url(images/2.jpg) center no-repeat fixed;background-size:cover;font-size:15px}body{min-height:100%;background:rgba(0,0,0,.7);padding:50px 50px 0}.navbar-fixed{height:0}main{align-items:center;display:flex;justify-content:center;flex-direction:column;padding:10px}main img{margin-bottom:0;height:110px;width:135px}#heading{color:#fff;font-size:35px;font-family:Helvetica}#form-box{background-color:#fff;display:flex;flex-direction:column;transition:box-shadow .25s;height:350px;border-radius:7px;width:40%;box-shadow:0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12)}#recruiter-signup-mainbox,#student-signup-mainbox{display:flex;justify-content:center;align-items:center}#recruiter-signup-box,#student-signup-box{width:100%}.tabs .tab a{color:#26a69a}.tabs .indicator{background-color:#26a69a;width:50%}#corner-buttons,#corner-buttons-small{position:absolute;top:1em;right:1em;left:5%;width:90%;display:flex}.card-panel{box-shadow:none;margin:0;font-size:12px;padding-bottom:0}#corner-buttons{flex-direction:row;justify-content:space-between}#corner-buttons-small{justify-content:space-between}#corner-buttons a{margin:4px}#corner-buttons-small a{margin:4px;font-size:10px;line-height:16px;display:flex;justify-content:center;align-items:center}.black_overlay,.white_content{display:none;position:absolute}#login-btn,#student-login-btn{width:100%;font-weight:700}.black_overlay{top:0;left:0;width:100%;height:100%;background-color:#000;opacity:.7;z-index:1001}.white_content{top:13%;left:26%;border:1px solid #fff;background-color:#fff;z-index:1002;overflow:auto;color:#000}.white_content #cross{position:absolute;right:10px;top:10px;color:#000}#back{position:absolute;top:20px;left:20px}.help-block{font-size:.8rem}}.required>label:after{content:' (*)'!important;color:#337ab7!important;top:0!important;opacity:1!important;display:inline!important}.required>[type=checkbox]+label:after{content:''!important}
