--- a/ipu/templates/account/activation_failure.html
+++ b/ipu/templates/account/activation_failure.html
@@ -1,10 +1,22 @@
 {% extends 'account/nav-landing.html' %}
 {% block title %} Acitvation Failed {% endblock %}
 {% block content %}
+<style type="text/css">
+	 @media (min-width:300px) and (max-width:992px){
+	 	.row
+	 	{
+	 		padding-top: 30px;
+	 	}
+	 	p
+	 	{
+	 		font-size: 13px!important;
+	 	}
+	 }
+</style>
 	<div class="row">
 		<h4 class="center flow-text red-text">Invalid Activation Link</h4>
 		<p class="col s12 flow-text blue-text"> If you are viewing this page after clicking the activation link sent to your registered email address, then chances are that the activation link has expired. </p>
 		<p class="col s12"><a class="btn btn-waves-light center" href="{% url 'auth' %}"> Resend Activation Link </a></p>
-		<p class="left flow-text blue-text"> Go to <a href={% url 'landing' %}>Home Page</a> </p>
+		<p class="left flow-text blue-text col s12"> Go to <a href={% url 'landing' %}>Home Page</a> </p>
 	</div>
 {% endblock %}
