--- a/ipu/templates/account/procedure_recruiter.html
+++ b/ipu/templates/account/procedure_recruiter.html
@@ -30,23 +30,23 @@
       </li>
       <li class="step">
         <img src="{% static 'images/process_pics/4.png' %}">
-        <p>Interested and eligible students apply to be considered for the job.</p>
+        <p>Interested and eligible students apply to be considered for the job. Recruiters can see all the applications on the platform.</p>
       </li>
       <li class="step">
         <img src="{% static 'images/process_pics/5.png' %}">
-        <p>Companies get access to the resume and profile of the interested students through the T&P website and students are shortlisted.</p>
+        <p>Recruiters get access to the resume and profile of the interested students through the T&P website and students are shortlisted.</p>
       </li>
       <li class="step">
         <img src="{% static 'images/process_pics/6.png' %}">
-        <p>Shortlisted students are notified.</p>
+        <p>Recruiters can notify the students and the information is sent to the college regarding the notification. Shortlisted students are notified.</p>
       </li>
       <li class="step">
         <img src="{% static 'images/process_pics/7.png' %}">
-        <p>Students can check their progress in various rounds of the placement session.</p>
+        <p>Recruiters can inform the college or the students regarding results of various rounds.</p>
       </li>
       <li class="step">
         <img src="{% static 'images/process_pics/8.png' %}">
-        <p>After completion of selection process, the selected students are notified.</p>
+        <p>After completion of selection process, recruiters can notify the selected students.</p>
       </li>
     </ol>
     
@@ -57,25 +57,25 @@
     <ol id="steps">
       <li class="step">
         <img src="{% static 'images/steps/1.png' %}" style="height: 30px !important;">
-        <p>Enter your qualifications and upload your resume for attracting recruiters.</p>
+        <p>Send a direct request to the training and placement cell of the college for organizing a recruitment drive after signing up on the platform.</p>
       </li>
       <li class="step">
         <img src="{% static 'images/steps/2.png' %}" style="height: 30px !important;">
         <p>
-        Pre-define your minimum expected salary and get notification of only those recruiters offering more than that.
+        Pre-define the job criteria for the drive and only the elligible students can apply.
         </p>
       </li>
       <li class="step">
         <img src="{% static 'images/steps/3.png' %}" style="height: 30px !important;">
-        <p>Get notified through email and message about various placement related information by the college.</p>
+        <p>Get access to the resume and profile of the interested students.</p>
       </li>
       <li class="step">
         <img src="{% static 'images/steps/4.png' %}" style="height: 30px !important;">
-        <p>Contact college's training and placement cell officers directly for various placement related queries.</p>
+        <p>Notify students and college about the result of various rounds of placement process.</p>
       </li>
       <li class="step">
         <img src="{% static 'images/steps/5.png' %}" style="height: 30px !important;">
-        <p>Get notifications about the result of the placement rounds by the recruiters.</p>
+        <p>After the drive is complete, notify the selected students about the result.</p>
       </li>
     </ol>
     
