--- a/ipu/static/account/css/intro.css
+++ b/ipu/static/account/css/intro.css
@@ -1,356 +1,1 @@
-html, body, .block {
-        height: 100%;
-      }
-      nav ul li a:hover, nav ul li a.active {
-        background-color: rgba(0,0,0,.1);
-      }
-      footer {
-        padding-left: 0;
-      }
-
-      #corner-button
-      {
-        position: fixed;
-        top: 0px;
-        left: 20px;
-        z-index: 654654656515;
-      }
-
-
-nav .brand-logo {
-    position: absolute;
-    color: #fff;
-    display: inline-block;
-    font-size: 2.1rem;
-    padding: 0;
-    white-space: nowrap;
-}
-      #corner-button2
-    {
-    position: fixed;
-    line-height: 54px;
-    font-size: 15px;
-    padding: 1px;
-    padding-bottom: 5px;
-    top: 6px;
-    right: 2px;
-    width: 170px;
-    height: 54px;
-    z-index: 50285154165;
-    background-color: #337ab7;
-    }
-
-    #icon-college
-    {
-      height: 100px;
-      width: 120px;
-    }
-
-      #data
-      {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 10px;
-        padding-top: 80px;
-      }
-      #data ul li
-      {
-        margin-top: 5px;
-        font-weight: bold;
-        font-size: 17px;
-        list-style-type: disc
-      }
-
-      #data p
-      {
-        padding: 10px;
-        padding-top: 2px;
-        font-size: 20px; 
-        padding-bottom: 0px;
-      }
-
-       #data-img
-      {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
-        padding: 10px;
-        padding-top: 70px;
-      }
-
-      #img-line
-      {
-        display: flex;
-        height: 300px;
-        width: 100%;
-        margin-bottom: 20px;
-      }
-
-      #boxes
-      {
-        width: 100%;
-        display: flex;
-        margin-top: 80px;
-      }
-      .box
-      {
-        background-color: white;
-        margin: 2%;
-        width: 20%;
-        min-height: 50px;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        padding: 5px;
-        box-shadow: 10px 10px 5px #888888;
-        border-radius: 5%;
-      }
-      .box h5
-      {
-        font-size: 20px;
-        font-family: "Arial"
-      }
-
-      #red p
-      {
-        padding: 10px;
-        padding-top: 2px;
-        font-size: 20px; 
-        margin-top: 10px;
-      }
-
-      #green p
-      {
-        padding: 10px;
-        padding-top: 2px;
-        font-size: 20px; 
-        margin-top: 10px;
-      }
-
-@media (min-width:300px) and (max-width:992px) and (orientation: portrait){
-
-   #img-line img
-   {
-      width: 95%;
-      height: 100%;
-
-   }   
-
-      #img-line
-      {
-        display: flex;
-        height: 50%;
-        width: 100%;
-        margin-bottom: 10px;
-      }
-
-    #icon-college
-    {
-      height: 50px;
-      width: 60px;
-    }
-
-    .inner-nav
-    {
-      height: 54px !important;
-    } 
-
-    #first-nav
-    {
-      margin-top: 35px;
-    }
-
-    nav .brand-logo {
-    position: absolute;
-    color: #fff;
-    display: inline-block;
-    font-size: 1.2rem;
-    padding: 0;
-    white-space: nowrap;
-}
-
-nav .brand-logo {
-    left: 40%;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
-}
-
-   #data p
-      {
-        padding: 4px;
-        padding-top: 2px;
-        font-size: 10px; 
-        padding-bottom: 0px;
-      }
-   #data ul li
-      {
-        margin-top: 1px;
-        font-weight: bold;
-        font-size: 10px;
-        list-style-type: disc;
-      }
-
-   #red p
-      {
-        padding: 5px;
-        padding-top: 2px;
-        font-size: 10.5px; 
-        margin-top: 3px;
-      }    
-
-   #green p
-      {
-        padding: 5px;
-        padding-top: 2px;
-        font-size: 12px; 
-        margin-top: 5px;
-      }   
-
-
-      #corner-button2
-    {
-    position: fixed;
-    line-height: 40px;
-    font-size: 12px;
-    padding: 1px;
-    padding-bottom: 5px;
-    top: 6px;
-    right: 2px;
-    width: 110px;
-    height: 40px;
-    z-index: 50285154165;
-    background-color: #337ab7;
-    }
-
-
-}
-
-@media (min-width:300px) and (max-width:992px) and (orientation: landscape){
-
-   #img-line img
-   {
-      width: 95%;
-      height: 90%;
-      margin-left: 2.5%;
-   }   
-
-   #img-line
-      {
-        display: flex;
-        height: 100px;
-        width: 100%;
-        margin-bottom: 10px;
-      }
-
-    nav .brand-logo {
-    position: absolute;
-    color: #fff;
-    display: inline-block;
-    font-size: 1.5rem;
-    padding: 0;
-    white-space: nowrap;
-}
-
-nav .brand-logo {
-    left: 30%;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
-}
-
-.inner-nav
-    {
-      height: 54px !important;
-    } 
-
-    #first-nav
-    {
-      margin-top: 24px;
-    }
-
-
-
-    #icon-college
-    {
-      height: 70px;
-      width: 85px;
-    }
-
-   #data p
-      {
-        padding: 5px;
-        padding-top: 0px;
-        font-size: 8.5px; 
-        padding-bottom: 0px;
-        margin-bottom: 1px;
-      }
-
-      #data ul
-      {
-
-        margin-top: 1px;
-      }
-   #data ul li
-      {
-        margin-top: 1px;
-        font-weight: bold;
-        font-size: 8px;
-        list-style-type: disc
-      }
-
-   #red p
-      {
-        padding: 5px;
-        padding-top: 2px;
-        font-size: 9px; 
-        margin-top: 2px;
-      }      
-   #green p
-      {
-        padding: 5px;
-        padding-top: 2px;
-        font-size: 8.5px; 
-        margin-top: 5px;
-      }   
-
-      nav {
-    color: #fff;
-    background-color: #ee6e73;
-    width: 100%;
-    height: 45px;
-    line-height: 45px;
-}
-
-       #corner-button2
-    {
-    position: fixed;
-    line-height: 35px;
-    font-size: 13px;
-    padding: 1px;
-    padding-bottom: 5px;
-    top: 4.5px;
-    right: 2px;
-    width: 150px;
-    height: 35px;
-    z-index: 50285154165;
-    background-color: #337ab7;
-    }
-
-     #corner-button
-      {
-        position: fixed;
-        top: -5px;
-        left: 20px;
-        z-index: 654654656515;
-      }
-
-    #icon-college
-    {
-      height: 50px;
-      width: 60px;
-    }
-
-
-}      
+.block,body,html{height:100%}nav ul li a.active,nav ul li a:hover{background-color:rgba(0,0,0,.1)}footer{padding-left:0}#corner-button{position:fixed;top:0;left:20px;z-index:654654656515}nav .brand-logo{position:absolute;color:#fff;display:inline-block;font-size:2.1rem;padding:0;white-space:nowrap}#data,#data-img,#img-line{display:flex}#corner-button2{position:fixed;line-height:54px;font-size:15px;padding:1px 1px 5px;top:6px;right:2px;width:170px;height:54px;z-index:50285154165;background-color:#337ab7}#icon-college{height:100px;width:120px}#data{flex-direction:column;justify-content:center;align-items:center;padding:80px 10px 10px}#data ul li{margin-top:5px;font-weight:700;font-size:17px;list-style-type:disc}#data p{padding:2px 10px 0;font-size:20px}#data-img{flex-direction:column;justify-content:flex-start;align-items:flex-start;padding:70px 10px 10px}#img-line{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;height:300px;width:100%;margin-bottom:20px}#boxes,.box{display:flex}#img-line img{width:95%;height:100%}#boxes{width:100%;margin-top:80px}.box{background-color:#fff;margin:2%;width:20%;min-height:50px;justify-content:space-around;align-items:center;padding:5px;box-shadow:10px 10px 5px #888;border-radius:5%}.box h5{font-size:20px;font-family:Arial}#green p,#red p{padding:2px 10px 10px;font-size:20px;margin-top:10px}@media (min-width:300px) and (max-width:992px) and (orientation:portrait){#img-line img{width:95%;height:100%}#img-line{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;height:50%;width:100%;margin-bottom:10px}#icon-college{height:50px;width:60px}.inner-nav{height:54px!important}#first-nav{margin-top:35px}nav .brand-logo{position:absolute;color:#fff;display:inline-block;font-size:1.2rem;padding:0;white-space:nowrap;left:40%;-webkit-transform:translateX(-50%);transform:translateX(-50%)}#green p,#red p{padding:2px 5px 5px}#data p{padding:2px 4px 0;font-size:10px}#data ul li{margin-top:1px;font-weight:700;font-size:10px;list-style-type:disc}#red p{font-size:10.5px;margin-top:3px}#green p{font-size:12px;margin-top:5px}#corner-button2{position:fixed;line-height:40px;font-size:12px;padding:1px 1px 5px;top:6px;right:2px;width:110px;height:40px;z-index:50285154165;background-color:#337ab7}}@media (min-width:300px) and (max-width:992px) and (orientation:landscape){#data ul,#data ul li{margin-top:1px}#img-line img{width:95%;height:90%;margin-left:2.5%}#img-line{height:100px;width:100%;margin-bottom:10px;display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex}nav .brand-logo{position:absolute;color:#fff;display:inline-block;font-size:1.5rem;padding:0;white-space:nowrap;left:30%;-webkit-transform:translateX(-50%);transform:translateX(-50%)}#green p,#red p{padding:2px 5px 5px}.inner-nav{height:54px!important}#first-nav{margin-top:24px}#data p{padding:0 5px;font-size:8.5px;margin-bottom:1px}#data ul li{font-weight:700;font-size:8px;list-style-type:disc}#red p{font-size:9px;margin-top:2px}#green p{font-size:8.5px;margin-top:5px}nav{color:#fff;background-color:#ee6e73;width:100%;height:45px;line-height:45px}#corner-button2{position:fixed;line-height:35px;font-size:13px;padding:1px 1px 5px;top:4.5px;right:2px;width:150px;height:35px;z-index:50285154165;background-color:#337ab7}#corner-button{position:fixed;top:-5px;left:20px;z-index:654654656515}#icon-college{height:50px;width:60px}}
