--- a/ipu/static/account/css/landing.css
+++ b/ipu/static/account/css/landing.css
@@ -1,777 +1,1 @@
-@media (min-width:300px) and (orientation: portrait){ 
-   html {
-    height: 100%;
-    background: url("USICT.jpg") no-repeat center fixed;
-    background-size: cover;
-    color: white;
-    padding: 0px;
-}
-
-nav{
-    
-    height: 92px;
-    padding-top: 10px;
-    background-color: #123482 !important;
-
-}
-
-nav .brand-logo { 
-    font-family: "Times New Roman"; /* New */
-    text-transform: capitalize; /* New */
-
-    font-size: 1.6rem;
-}
-
-footer.page-footer {
-    background-color: #123482;
-}
-
-footer.page-footer {
-    margin-top: 10px;
-    padding-top: 10px;
-}
-
-#footer-last
-{
-    font-size: 9px;
-    line-height: 10px;
-}
-
-#footer-links
-{
-    font-size: 10px;
-}
-#logo
-{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.parallax {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 1; 
-}
-
-#inner-logo h4
-{
-  font-size: 16px;
-  margin-bottom: 1px;
-  font-family: "Times New Roman";
-  text-transform: capitalize;
-}
-
-#inner-logo h6
-{
-  
-  font-size: 12px;
-  margin-top: 1px;
-  font-family: "Times New Roman";
-  text-transform: capitalize;
-}
-
-
-#brand-corner:hover
-{
-  cursor: pointer;
-}
-
-
-#corner-button
-{
-    line-height: 40px;
-    font-size: 9px;
-    padding: 1px;
-    width: 33%;
-    height: 40px;
-    background-color: #123482 !important;
-    margin-top: 15px;
-    z-index: 4654665 !important;
-}
-
-#top-section
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#dropdown3 li
-{
-    display: flex;justify-content: center;align-items: center;
-}
-
-#icon-college
-{
-    height: 55px;
-    width: 62px;
-    display: flex;
-    position: initial;
-    transform: translateX(0%);
-    z-index: 1651651651645;
-    min-width: 1%;
-    min-height: 1%;
-}
-
-
-#mobile-links
-{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-#mobile-links li a
-{
-    font-size: 9.5px;
-    line-height: 12px;
-    height: 12px;
-    padding: 5px;
-}
-
-#img-mid
-{
-    background: rgba(0, 0, 0, 0.4);
-}
-
-#img-first
-{
-    background: rgba(0, 0, 0, 0.4);
-}
-
-#img-bottom
-{
-    background: rgba(0, 0, 0, 0.4);
-}
-
-.parallax-container {
-      height: 250px;
-    }
-#second-parallax-container
-{
-   height: 78px;
-
-}
-
-#last-parallax-container
-{
-   height: 300px;
-
-}
-.section
-{
-    background-color: #f2f2f2;
-    height: 300px;
-}     
-
-
-#first-bo
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 120%;
-    flex-direction: column;
-    z-index: 1 !important;
-}
-
-#first-bo h3
-{
-    font-size: 14px;
-    margin: 2px;
-    margin-top: 15px;
-}
-
-
-#second-section
-{
-    background-color: rgba(0, 0, 0, 0.8);
-    height: 150px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-
-
-#second-box
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 90%;
-}
-
-#second-box>h3
-{
-    color: white;
-    font-size: 14px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-}
-
-#second-box-images
-{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    width: 90%;
-}
-
-#second-box-images>img
-{
-    margin: 5px;
-    height: 42px;
-    width: 46px;
-}
-
-#third-section
-{
-    height: 45px;
-    background-color: rgba(0, 0, 0, 0.8);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 15px;
-}
-
-#third-box
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 90%;
-}
-#third-box>h3
-{
-    color: white;
-    font-size: 12px;
-    margin-bottom: 5px;
-    margin-top: 5px;
-    text-align: center;
-}
-
-#icons
-{
-    font-size: 1.5rem;
-}
-
-#icons i
-{
-  margin-left: 5px;
-}
- 
-}
-
-@media (min-width:300px) and (max-width:992px) and (orientation: landscape) { 
-
-   html {
-    height: 100%;
-    background: url("USICT.jpg") no-repeat center fixed;
-    background-size: cover;
-    color: white;
-    padding: 0px;
-}
-
-nav{
-    
-    height: 80px;
-    background-color: #123482 !important;
-    padding-top: 2px;
-
-
-}
-
-nav .brand-logo { 
-    font-family: "Times New Roman"; /* New */
-    text-transform: capitalize; /* New */
-  font-size: 1.6rem;
-}
-
-footer.page-footer {
-    background-color: #123482 !important;
-}
-
-footer.page-footer {
-    margin-top: 10px;
-    padding-top: 10px;
-}
-
-#footer-last
-{
-    font-size: 12px;
-}
-
-#footer-links
-{
-    font-size: 10px;
-}
-
-#logo
-{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-
-#inner-logo h4
-{
-  font-size: 15px;
-  margin-bottom: 1px;
-  font-family: "Times New Roman";
-  text-transform: capitalize;
-}
-
-#inner-logo h6
-{
-  
-  font-size: 12px;
-  margin-top: 1px;
-  font-family: "Times New Roman";
-  text-transform: capitalize;
-}
-
-
-#brand-corner:hover
-{
-  cursor: pointer;
-}
-
-#top-section
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#icon-college
-{
-    height: 60px;
-    width: 70px;
-    display: flex;
-    position: initial;
-    transform: translateX(0%);
-    z-index: 1651651651645;
-    min-width: 1%;
-    min-height: 1%;
-}
-
-#corner-button
-{
-    line-height: 42px;
-    font-size: 11px;
-    padding: 1px;
-    padding-bottom: 5px;
-    width: 130px;
-    height: 42px;
-    background-color: #123482 !important;
-    margin-top: 10px;
-    z-index: 467885498 !important;
-}
-
-#mobile-links
-{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-#mobile-links li a
-{
-    font-size: 11px;
-    line-height: 12px;
-    height: 12px;
-    padding: 5px;
-}
-
-#img-mid
-{
-    background: rgba(0, 0, 0, 0.4);
-}
-
-#img-first
-{
-    background: rgba(0, 0, 0, 0.4);
-}
-
-#img-bottom
-{
-    background: rgba(0, 0, 0, 0.4);
-}
-
-.parallax-container {
-      height: 350px;
-    }
-.section
-{
-    background-color: #f2f2f2;
-    height: 300px;
-}     
-
-.parallax {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 1;
-}
-
-
-#first-bo
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 120%;
-    flex-direction: column;
-    z-index: 1;
-}
-
-#first-bo h3
-{ 
-    font-size: 1.5rem;
-
-}
-
-#second-section
-{
-    background-color: rgba(0, 0, 0, 0.8);
-    height: 150px;
-}
-
-
-#second-box
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 90%;
-}
-
-#second-box>h3
-{
-    color: white;
-    font-size: 20px;
-}
-
-#second-box-images
-{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 90%;
-}
-
-#second-box-images img
-{
-    margin: 5px;
-    height: 45px;
-    width: 50px;
-}
-
-#third-section
-{
-    height: 60px;
-    background-color: rgba(0, 0, 0, 0.9);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#third-box
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 90%;
-}
-#third-box>h3
-{
-    color: white;
-    font-size: 13.5px;
-    margin-bottom: 9px;
-    margin-top: 25px;
-}
-
-
-#last-parallax-container
-{
-   height: 250px;
-
-}
-
-#second-parallax-container
-{
-   height: 220px;
-
-}
-
-#first-parallax-container
-{
-   height: 220px;
-
-}
-
-footer.page-footer {
-    background-color: #123482;
-}
-
-footer.page-footer {
-    margin-top: 10px;
-    padding-top: 10px;
-}
-
-
-
-} 
-
-
-
-
-@media (min-width:992px) {
-
-html {
-    height: 100%;
-    background: url("USICT.jpg") no-repeat center fixed;
-    background-size: cover;
-    color: white;
-    padding: 0px;
-}
-
-nav{
-    
-    height: 64px;
-    padding-top: 2px;
-    background-color: #123482 !important;
-    padding-left: 20px;
-
-}
-
-nav .brand-logo { 
-    font-family: "Times New Roman"; /* New */
-    text-transform: capitalize; /* New */
-  font-size: 1.6rem;
-}
-
-
-footer.page-footer {
-    background-color: #123482;
-}
-
-footer.page-footer {
-    margin-top: 10px;
-    padding-top: 10px;
-}
-
-
-#logo
-{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-
-#inner-logo h4
-{
-  font-size:21px;
-  margin-bottom: 1px;
-  font-family: "Times New Roman";
-  text-transform: capitalize;
-}
-
-#inner-logo h6
-{
-  
-  font-size: 14px;
-  margin-top: 1px;
-  font-family: "Times New Roman";
-  text-transform: capitalize;
-}
-
-
-#brand-corner:hover
-{
-  cursor: pointer;
-}
-
-.parallax {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 1;
-}
-
-
-
-#corner-button
-{
-    line-height: 58px;
-    font-size: 16px;
-    padding: 1px;
-    padding-bottom: 5px;
-    width: 180px;
-    height: 58px;
-    background-color: #123482 !important;
-    z-index: -1 !important;
-}
-
-#top-section
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#icon-college
-{
-    height: 125px;
-    width: 140px;
-    display: flex;
-    position: initial;
-    transform: translateX(0%);
-    z-index: 1651651651645;
-    min-width: 1%;
-    min-height: 1%;
-}
-
-
-#img-mid
-{
-    background: rgba(0, 0, 0, 0.4);
-}
-
-#img-first
-{
-    background: rgba(0, 0, 0, 0.4);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#img-bottom
-{
-    background: url("../images/23.jpg") no-repeat center fixed;
-    background-size: cover;
-}
-
-.parallax-container {
-      height: 400px;
-    }
-.section
-{
-    background-color: #f2f2f2;
-    height: 300px;
-}     
-
-#first-bo
-{
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    z-index: 1 !important;
-    
-}
-
-#first-bo h3
-{ 
-    font-size: 2.92rem;
-
-}
-
-
-#second-section
-{
-    background-color: rgba(0, 0, 0, 0.9);
-    height: 250px;
-}
-
-
-#second-box
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 90%;
-}
-
-#second-box>h3
-{
-    color: white;
-    font-size: 30px;
-}
-
-#second-box-images
-{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 80%;
-}
-
-#second-box-images>img
-{
-    margin: 10px;
-    height: 110px;
-    width: 120px;
-}
-
-#third-section
-{
-    height: 100px;
-    background-color: rgba(0, 0, 0, 0.9);
-}
-
-#third-box
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 90%;
-}
-#third-box>h3
-{
-    color: white;
-    font-size: 20px;
-    margin-bottom: 5px;
-    margin-top: 25px;
-}
-
-#last-parallax-container
-{
-   height: 550px;
-
-}
-
-#second-parallax-container
-{
-   height: 200px;
-
-}
-
-#first-parallax-container
-{
-    height: 600px;
-}
-
-}
+@media (min-width:300px) and (orientation:portrait){#logo,#top-section{justify-content:center}#inner-logo h4,#inner-logo h6,nav .brand-logo{font-family:"Times New Roman";text-transform:capitalize}#first-bo,#icon-college,#logo,#mobile-links,#second-box,#second-box-images,#third-box,#third-section,#top-section{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex}html{height:100%;background:url(USICT.jpg) center no-repeat fixed;background-size:cover;color:#fff;padding:0}nav{height:92px;padding-top:10px;background-color:#123482!important}nav .brand-logo{font-size:1.6rem}footer.page-footer{background-color:#123482;margin-top:10px;padding-top:10px}#footer-last{font-size:9px;line-height:10px}#footer-links{font-size:10px}#logo{display:flex;align-items:center}.parallax{position:absolute;top:0;left:0;right:0;bottom:0;z-index:1}#inner-logo h4{font-size:16px;margin-bottom:1px}#inner-logo h6{font-size:12px;margin-top:1px}#brand-corner:hover{cursor:pointer}#corner-button{line-height:40px;font-size:9px;padding:1px;width:33%;height:40px;background-color:#123482!important;margin-top:15px;z-index:4654665!important}#top-section{display:flex;align-items:center}#dropdown3 li{display:flex;justify-content:center;align-items:center}#icon-college{height:55px;width:62px;display:flex;position:initial;transform:translateX(0);-moz-transform:translateX(0);-webkit-transform:translateX(0);z-index:1651651651645;min-width:1%;min-height:1%}#mobile-links{width:100%;display:flex;align-items:center;justify-content:space-around}#mobile-links li a{font-size:9.5px;line-height:12px;height:12px;padding:5px}#img-bottom,#img-first,#img-mid{background:rgba(0,0,0,.4)}.parallax-container{height:250px}#second-parallax-container{height:78px}#last-parallax-container,.section{height:300px}.section{background-color:#f2f2f2}#second-section,#third-section{background-color:rgba(0,0,0,.8)}#first-bo{display:flex;justify-content:center;align-items:center;height:120%;flex-direction:column;z-index:1!important}#first-bo h3{font-size:14px;margin:15px 2px 2px}#second-section{height:150px;padding-top:5px;padding-bottom:5px}#second-box,#third-box{display:flex;justify-content:center;align-items:center;flex-direction:column;width:90%}#second-box>h3{color:#fff;font-size:14px;margin-bottom:10px;margin-top:10px}#second-box-images{display:flex;flex-direction:row;justify-content:space-between;align-items:center;flex-wrap:wrap;width:90%}#second-box-images>img{margin:5px;height:42px;width:46px}#third-section{height:45px;display:flex;justify-content:center;align-items:center;padding-top:15px}#third-box>h3{color:#fff;font-size:12px;margin-bottom:5px;margin-top:5px;text-align:center}#icons{font-size:1.5rem}#icons i{margin-left:5px}}@media (min-width:300px) and (max-width:992px) and (orientation:landscape){#inner-logo h4,#inner-logo h6,nav .brand-logo{font-family:"Times New Roman";text-transform:capitalize}#corner-button,footer.page-footer,nav{background-color:#123482!important}#second-box,#second-box-images,#third-box{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;width:90%}html{height:100%;background:url(USICT.jpg) center no-repeat fixed;background-size:cover;color:#fff;padding:0}nav{height:80px;padding-top:2px}nav .brand-logo{font-size:1.6rem}#footer-last{font-size:12px}#footer-links{font-size:10px}#logo,#top-section{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;justify-content:center;align-items:center}#inner-logo h4{font-size:15px;margin-bottom:1px}#inner-logo h6{font-size:12px;margin-top:1px}#brand-corner:hover{cursor:pointer}#icon-college{height:60px;width:70px;display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;position:initial;transform:translateX(0);z-index:1651651651645;min-width:1%;min-height:1%}#corner-button{line-height:42px;font-size:11px;padding:1px 1px 5px;width:130px;height:42px;margin-top:10px;z-index:467885498!important}#mobile-links{width:100%;display:flex;align-items:center;justify-content:space-around}#mobile-links li a{font-size:11px;line-height:12px;height:12px;padding:5px}#img-bottom,#img-first,#img-mid{background:rgba(0,0,0,.4)}.parallax-container{height:350px}.section{background-color:#f2f2f2;height:300px}.parallax{position:absolute;top:0;left:0;right:0;bottom:0;z-index:1}#first-bo{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;justify-content:center;align-items:center;height:120%;flex-direction:column;z-index:1}#first-bo h3{font-size:1.5rem}#second-section{background-color:rgba(0,0,0,.8);height:150px}#second-box,#third-box{display:flex;justify-content:center;align-items:center;flex-direction:column}#second-box>h3{color:#fff;font-size:20px}#second-box-images{display:flex;flex-direction:row;justify-content:space-between;align-items:center}#second-box-images img{margin:5px;height:45px;width:50px}#third-section{height:60px;background-color:rgba(0,0,0,.9);display:flex;justify-content:center;align-items:center}#third-box>h3{color:#fff;font-size:13.5px;margin-bottom:9px;margin-top:25px}#last-parallax-container{height:250px}#first-parallax-container,#second-parallax-container{height:220px}footer.page-footer{margin-top:10px;padding-top:10px}}@media (min-width:992px){#logo,#top-section{justify-content:center}#inner-logo h4,#inner-logo h6,nav .brand-logo{font-family:"Times New Roman";text-transform:capitalize}#first-bo,#icon-college,#logo,#second-box,#second-box-images,#third-box,#top-section{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex}html{height:100%;background:url(USICT.jpg) center no-repeat fixed;background-size:cover;color:#fff;padding:0}nav{height:64px;padding-top:2px;background-color:#123482!important;padding-left:20px}nav .brand-logo{font-size:1.6rem}footer.page-footer{background-color:#123482;margin-top:10px;padding-top:10px}#img-first,#img-mid{background:rgba(0,0,0,.4)}#logo{display:flex;align-items:center}#inner-logo h4{font-size:21px;margin-bottom:1px}#inner-logo h6{font-size:14px;margin-top:1px}#brand-corner:hover{cursor:pointer}.parallax{position:absolute;top:0;left:0;right:0;bottom:0;z-index:1}#corner-button{line-height:58px;font-size:16px;padding:1px 1px 5px;width:180px;height:58px;background-color:#123482!important;z-index:-1!important}#top-section{display:flex;align-items:center}#first-bo,#img-first{justify-content:center}#icon-college{height:125px;width:140px;display:flex;position:initial;transform:translateX(0);z-index:1651651651645;min-width:1%;min-height:1%}#img-first{display:flex;align-items:center}#img-bottom{background:url(../images/23.jpg) center no-repeat fixed;background-size:cover}.parallax-container{height:400px}.section{background-color:#f2f2f2;height:300px}#second-section,#third-section{background-color:rgba(0,0,0,.9)}#first-bo{display:flex;align-items:center;flex-direction:column;z-index:1!important}#first-bo h3{font-size:2.92rem}#second-section{height:250px}#second-box,#third-box{display:flex;justify-content:center;align-items:center;flex-direction:column;width:90%}#second-box>h3{color:#fff;font-size:30px}#second-box-images{display:flex;flex-direction:row;justify-content:space-between;align-items:center;width:80%}#second-box-images>img{margin:10px;height:110px;width:120px}#third-section{height:100px}#third-box>h3{color:#fff;font-size:20px;margin-bottom:5px;margin-top:25px}#last-parallax-container{height:550px}#second-parallax-container{height:200px}#first-parallax-container{height:600px}}
