--- a/ipu/static/account/css/team.css
+++ b/ipu/static/account/css/team.css
@@ -1,143 +1,1 @@
-#team
-{
-	background-color: #dadcef;
-}
-
-.icons
-{
-	margin-left: 20px;
-}
-
-h2
-{
-   font-weight: 450;
-   color: rgb(246, 112, 25);
-   font-family: fantasy;
-}
-
-img
-{
-	height: 160px;
-	width: 160px;
-}
-
-h4
-{
-	font-weight: 350;
-	font-size: 30px;
-	margin-bottom: 10px;
-}
-
-p
-{
-	margin-top: 0px;
-	margin-bottom: 5px;
-}
-
-a
-{
-	color: black;
-
-}
-
-a:hover {
-    color: red;
-    cursor: pointer;
-}
-
-.gmail-icon
-{
-	color : rgb(216, 31, 42);
-}
-
-.fb-icon
-{
-	color: rgb(59, 89, 152);
-}
-
-.linkedin-icon
-{
-	color: rgb(0, 119, 181);
-}
-
-@media (min-width:300px) and (orientation: portrait){
-
-  #team
-{
-	background-color: #dadcef;
-}
-
-.icons
-{
-	margin-left: 20px;
-
-}
-
-h2
-{
-   font-weight: 450;
-   color: rgb(246, 112, 25);
-   font-family: fantasy;
-   font-size: 34px;
-   margin-bottom: 10px;
-   margin-top: 10px;
-}
-
-.row h4
-{
-	font-weight: 500;
-	font-size: 30px;
-	margin-bottom: 10px;
-	font-size: 15px;
-	text-align: center;
-}
-
-.row p
-{
-	margin-top: 0px;
-	margin-bottom: 5px;
-	font-size: 12px;
-	text-align: center;
-}
-
-a
-{
-	color: black;
-
-}
-
-a:hover {
-    color: red;
-    cursor: pointer;
-}
-
-.gmail-icon
-{
-	color : rgb(216, 31, 42);
-}
-
-.fb-icon
-{
-	color: rgb(59, 89, 152);
-}
-
-.linkedin-icon
-{
-	color: rgb(0, 119, 181);
-}
-
-img
-{
-	height: 100px;
-	width: 100px;
-}
-
-#tags
-{
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-}
+#team{background-color:#dadcef}.icons{margin-left:20px}h2{font-weight:450;color:#f67019;font-family:fantasy}img{height:160px;width:160px}h4{font-weight:350;font-size:30px;margin-bottom:10px}p{margin-top:0;margin-bottom:5px}a{color:#000}a:hover{color:red;cursor:pointer}.gmail-icon{color:#d81f2a}.fb-icon{color:#3b5998}.linkedin-icon{color:#0077b5}@media (min-width:300px) and (orientation:portrait){.row h4,h2{margin-bottom:10px}.row h4,.row p{text-align:center}#team{background-color:#dadcef}.icons{margin-left:20px}h2{font-weight:450;color:#f67019;font-family:fantasy;font-size:34px;margin-top:10px}.row h4{font-weight:500;font-size:15px}.row p{margin-top:0;margin-bottom:5px;font-size:12px}a{color:#000}a:hover{color:red;cursor:pointer}.gmail-icon{color:#d81f2a}.fb-icon{color:#3b5998}.linkedin-icon{color:#0077b5}img{height:100px;width:100px}#tags{width:100%;display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;justify-content:center;align-items:center}}
