--- a/ipu/templates/account/activation_success.html
+++ b/ipu/templates/account/activation_success.html
@@ -1,10 +1,22 @@
 {% extends 'account/nav-landing.html' %}
 {% block title %} Acitvation Complete {% endblock %}
 {% block content %} 
+<style type="text/css">
+	 @media (min-width:300px) and (max-width:992px){
+	 	.row
+	 	{
+	 		padding-top: 30px;
+	 	}
+	 	p
+	 	{
+	 		font-size: 13px!important;
+	 	}
+	 }
+</style>
 	<div class="row">
 	    <h4 class="center flow-text teal-text text-accent-4"> Your email address has been verified successfully!</h4>
-		<div class="col s12">
-			<a class="btn btn-waves-light col s8 offset-s2" style="width: 80%" href="{% url 'auth' %}">Login &nbsp;<i class="fa fa-sign-in fa-2x"></i></a>
+		<div class="col s5 offset-s3">
+			<a class="btn btn-waves-light col s5 offset-s3" style="width: 80%" href="{% url 'auth' %}">Login &nbsp;<i class="fa fa-sign-in fa-2x"></i></a>
 		</div>
 	</div>
 {% endblock %}
