--- a/ipu/templates/account/auth.html
+++ b/ipu/templates/account/auth.html
@@ -105,7 +105,7 @@
     	    	 <div class="col s12 m12 l12">
     	      		<ul class="tabs">
     	        		<li class="tab col s6 m6 l6"><a class="active" href="#student-login-tab">Student</a></li>
-    	        		<li class="tab col s6 m6 l6"><a  href="#other-login-tab">Other</a></li>
+    	        		<li class="tab col s6 m6 l6"><a  href="#other-login-tab">Recruiter / Faculty</a></li>
     	      		</ul>
     	    	 </div>
     	         <div id="student-login-tab" class="col s12 m12 l12">
