--- a/ipu/templates/account/forgot_password.html
+++ b/ipu/templates/account/forgot_password.html
@@ -7,11 +7,16 @@
 {% endblock %}
 {% block main %} 
 <style type="text/css">
-	 @media (min-width:300px) and (orientation: portrait){
+	 @media (min-width:300px) and (max-width:992px){
 
 	 	#forgot-password-form-div
 	 	{
-	 		padding-top: 7%;
+	 		padding-top: 8%;
+	 	}
+
+	 	.row
+	 	{
+	 		padding-top: 40px;
 	 	}
 
 	 	h4 {
@@ -22,7 +27,7 @@
        }
 
        .section {
-    padding-top: .5rem;
+    padding-top: .6rem;
     padding-bottom: 1rem;
 }
 	 }
