--- a/ipu/templates/account/forgot_password_email_sent.html
+++ b/ipu/templates/account/forgot_password_email_sent.html
@@ -1,6 +1,18 @@
 {% extends 'account/nav-landing.html' %}
 {% block title %} Forgot Password Email Sent {% endblock %}
 {% block main %} 
+<style type="text/css">
+	 @media (min-width:300px) and (max-width:992px){
+	 	.row
+	 	{
+	 		padding-top: 30px;
+	 	}
+	 	p
+	 	{
+	 		font-size: 13px!important;
+	 	}
+	 }
+</style>
 	<div class="row">
 		<p class="col s10 m8 offset-s1 offset-m2 flow-text teal-text">We've emailed you the instructions for resetting your password at <b>{{ email }}</b>.<br> If an account exists with the email you entered, you should receive them shortly.</p>
 	<br>
