--- a/ipu/templates/account/nav-landing.html
+++ b/ipu/templates/account/nav-landing.html
@@ -388,7 +388,7 @@ footer.page-footer {
 <ul id="dropdown1" class="dropdown-content">
     <li><a href="{% url 'procedure' %}">For Students</a></li>
     <li class="divider"></li>
-    <li><a href="#!">For Recruiters</a></li>
+    <li><a href="{% url 'procedure_recruiter' %}">For Recruiters</a></li>
 </ul>
 
 <ul id="dropdown2" class="dropdown-content">
@@ -400,13 +400,25 @@ footer.page-footer {
 <ul id="dropdown3" class="dropdown-content">
     <li><a href="{% url 'procedure' %}">For Students</a></li>
     <li class="divider"></li>
-    <li><a href="#!">For Recruiters</a></li> 
+    <li><a href="{% url 'procedure_recruiter' %}">For Recruiters</a></li> 
 </ul>        
 
 <ul id="dropdown4" class="dropdown-content">
     <li><a href="#!">For Students</a></li>
     <li class="divider"></li>
     <li><a href="#!">For Recruiters</a></li> 
+</ul>
+
+<ul id="dropdown5" class="dropdown-content">
+    <li><a href="{% url 'auth' %}#student-login-tab">Students</a></li>
+    <li class="divider"></li>
+    <li><a href="{% url 'auth' %}#other-login-tab">Recruiters / Faculty</a></li>
+</ul>
+
+<ul id="dropdown6" class="dropdown-content">
+    <li><a href="{% url 'auth' %}#student-login-tab">Students</a></li>
+    <li class="divider"></li>
+    <li><a href="{% url 'auth' %}#other-login-tab">Recruiters / Faculty</a></li>
 </ul>
 
 <div class="navbar-fixed">
@@ -431,6 +443,7 @@ footer.page-footer {
         <li><a href="{% url 'past_recruiters' %}">Recruiters</a></li>
         <li><a class='dropdown-button' href='#' data-gutter="20" data-constrainwidth="false" data-beloworigin="true"  data-activates='dropdown2'>Rules & Regulations</a></li>
         <li><a href="{% url 'stats' %}">Placement Stats</a></li>
+        <li><a class='dropdown-button' href='#' data-gutter="10" data-constrainwidth="false" data-beloworigin="true"  data-activates='dropdown5'>LOGIN/SIGNUP</a></li>
        <!-- <li><a href="{% url 'team' %}">Meet The Team</a></li> -->
       </ul>
       </div>
