--- a/ipu/templates/student/create.html
+++ b/ipu/templates/student/create.html
@@ -1,5 +1,129 @@
 {% extends 'account/base.html' %}
 {% load material_form %}
+{% block head %}
+	<link rel="stylesheet" type="text/css" href="{% static 'sweetalert/dist/sweetalert.css' %}">
+<style>
+	.required > label:after {
+		content: ' (*)' !important;
+		color: #337ab7 !important;
+		top: 0px !important;
+		opacity: 1 !important;
+		display: inline !important;
+	}
+
+	.required > [type="checkbox"] + label:after {
+		content: '' !important;
+	}
+	.navbar-fixed {
+		background-color: #1c262f;
+	}
+
+	nav .brand-logo { 
+	font-family: "Times New Roman"; /* New */
+	text-transform: capitalize; /* New */
+  font-size: 1.6rem;
+  margin-left: 20px;
+}
+
+#logo
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+nav .button-collapse {
+    margin: 0 10px;
+    margin-left: 5px;
+}
+
+#inner-logo
+{
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+
+#inner-logo h4
+{
+  font-size:21px;
+  margin-bottom: 1px;
+  font-family: "Times New Roman";
+  text-transform: capitalize;
+}
+
+#inner-logo h6
+{
+  
+  font-size: 14px;
+  margin-top: 1px;
+  font-family: "Times New Roman";
+  text-transform: capitalize;
+}
+
+#img-corner
+{
+    height: 30px;
+    width: 30px;
+    margin-bottom: -9px;
+    
+}
+@media screen and (min-width: 992px){
+#corner-button
+	{
+		position: fixed;
+		top: 14px;
+		right: 10px;
+		z-index: 4159465419454;
+	}
+}
+	 @media screen and (min-width: 300px) and (max-width: 992px){
+	 	
+	 	#corner-button
+	{
+		position: fixed;
+		top: 16px;
+		left: 10px;
+		z-index: 4159465419454;
+		-webkit-transform: rotate(180deg);
+	    -moz-transform: rotate(180deg);
+	    -o-transform: rotate(180deg);
+	    -ms-transform: rotate(180deg);
+	    transform: rotate(180deg);
+		}
+	 }
+</style>
+
+{% endblock %}
+{% block header %}
+<a href="{% url 'logout' %}" class="waves-effect waves-light btn hide-on-med-and-down" id="corner-button"> Logout </a>
+<a class="hide-on-large-only" id="corner-button" href="{% url 'logout' %}" class="waves-effect waves-light btn right" id="logout-button"><i class="material-icons">input</i></a>
+	<!--materialize fixed main navbar-->
+        <div class="navbar-fixed">
+            <nav id="nav-bar">
+                <div class="nav-wrapper">
+                    <a href="{{ request.user.get_home_url }}" class="brand-logo" id="brand-corner">
+                    <div class="left hide-on-med-and-down" style="margin-left: 1.5%;">
+                      <div id="logo">
+                        <img src="{% static 'images/ipu-logo.png' %}" style="height: 55px">
+                        <div id="inner-logo">
+                        <h4>Training & Placement cell</h4>
+                        <h6>Guru Gobind Singh Indraprastha University</h6> 
+                        </div>
+                      </div>
+                    </div>
+                    </a>
+                    <a id="center_logo" href="{{ request.user.get_home_url }}" class="brand-logo center hide-on-large-only">Training & Placement Cell</a>
+                    <h6 class="center hide-on-large-only" style="font-size: 10px;padding: 0px;margin: 1px;margin-top: 1px;position: absolute;top: 40px;left: 15%;width: 70%;right: 15%">Guru Gobind Singh Indraprastha University</h6>
+            
+            </div>
+        </nav>
+      </div> 
+
+<!--navbar ends-->
+{% endblock %}
 {% block title %} Student | Sign Up {% endblock title %}
 {% block content %}
    <style type="text/css">
