--- a/ipu/templates/student/qualifications.html
+++ b/ipu/templates/student/qualifications.html
@@ -85,15 +85,22 @@ nav .button-collapse {
 	 	#corner-button
 	{
 		position: fixed;
-		bottom: 10px;
-		right: 10px;
+		top: 16px;
+		left: 10px;
 		z-index: 4159465419454;
-	}
+		-webkit-transform: rotate(180deg);
+	    -moz-transform: rotate(180deg);
+	    -o-transform: rotate(180deg);
+	    -ms-transform: rotate(180deg);
+	    transform: rotate(180deg);
+		}
 	 }
 </style>
 
 {% endblock %}
 {% block header %}
+<a href="{% url 'logout' %}" class="waves-effect waves-light btn hide-on-med-and-down" id="corner-button"> Logout </a>
+<a class="hide-on-large-only" id="corner-button" href="{% url 'logout' %}" class="waves-effect waves-light btn right" id="logout-button"><i class="material-icons">input</i></a>
 	<!--materialize fixed main navbar-->
         <div class="navbar-fixed">
             <nav id="nav-bar">
@@ -120,8 +127,6 @@ nav .button-collapse {
 {% endblock %}
 {% block title %} Qualifications {% endblock %}
 {% block content %}
-
-<a id="corner-button" href="{% url 'logout' %}" class="waves-effect waves-light btn right" id="logout-button"> Logout </a>
 	<div class="row">
 		<!-- Tabs -->
 		<div class="col s12">
